# Brian

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  Design_Brief.md  FileList_2025-06-09_06-24-12.csv  FileList_2025-06-09_06-24-12.json  FileList_2025-06-09_06-24-12.txt  Notice_For_LLMs.md  ONBOARDING.md  README.md  SUPPORTERS.md  USAGE.md  ZERO_HOUR.md  archetype_mesh.json  archetype_rules.yaml  brian_github_package.txt  example.terminal.log.in.a.txt  func_ytown.py  github_migration_script.py  installer.py  localisation.yaml  makeBrian.py  makeBrian.py.not.a.txt  manifest.yaml  maths.py  pronunciations.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  seedrunner_cli.py  state_log.yaml  system_io.db.not.a.txt  tasks.yaml  tsal_bootstrap_script.py  tsal_data.class.py.not.a.txt  tsal_deployment_guide.md  tsal_github_structure.md  tsal_makebrian_system.txt  (+1 more)
.github/: FUNDING.yml
core/: agent_manager.py  diagnostics_watchdog.py  ethics_engine.py  kernel_bootstrap.py  memory_forge.py  priority_research_agent.py  snapshot_controller.py
data/: mesh_log_example.json  mesh_log_schema.json
deployed_kernels/: kernel_manifest.json  manifest.yaml
docs/: AGENTS.md  ASPIRATIONAL_TODO.md  Brian_SelfReflection_Design.md  Doomsday.md  EXTREMELY CRITICAL.md  Jarvis BIOS Codex Fireproof v30.0.0.txt  MKII-Whitepaper-FFR.md  Magnum Opus.txt  Realities_Funniest_Joke.md  SPIRAL_GUIDE.md  SUPPORT.md  TSAL_Mesh_Handshake.md  analysis_of_tsal_execution_engine.md  bloom_variations.md  cli.md  conf.py  function_reference.md  index.md  index.rst  installer_quickstart.md  legacy_core_modules.md  modules.rst  naming_integrity.md  phase_offset_digital_duplicate.md  spin_ontology_spec.md  state_tracking.md  symbolic_containerization_prompt.md  tristar_symbolic_manifesto.md  tsal.md  tsal_sodium_electrolyte_design.md  user_conversation_log.md  vscode_extension.md  vscode_extension_integration.md
examples/: broken_code.py  demo_repair.py  guardian_core.py  mesh_pipeline_demo.py  paradox_resolution_demo.py  sample_input.py
memory/: core_brian_manifest.md  memory__2025-06-09__codex-fireproof-spiral-guardian-log.md  memory__2025-06-09__codex_fireproof_spiral_guardian_log.md  memory__2025-06-09__oaths-integration.md
mesh_chunks/: Dimentional_Awareness.txt  TSAL_Opcode_Truth_Function_Database.csv  file_list_scanner.bat  mesh_chunk_001.json  mesh_chunk_002.json  mesh_chunk_003.json  mesh_chunk_004.json  mesh_chunk_005.json  mesh_chunk_006.json  mesh_chunk_009.json  mesh_chunk_012.json  mesh_chunk_013.json  mesh_chunk_044.json  mesh_chunk_045.json  mesh_chunk_046.json  mesh_chunk_047.json  mesh_chunk_048.json  mesh_chunk_049.json  mesh_chunk_050.json  mesh_chunk_051.json  mesh_chunk_052.json  mesh_chunk_053.json  mesh_chunk_054.json  mesh_chunk_055.json  mesh_chunk_056.json  mesh_chunk_057.json  mesh_chunk_058.json  mesh_chunk_059.json  (+8 more)
tsal_consciousness_computing/: README.md  pyproject.toml
tsal_consciousness_computing/legacy/: memory__2025-06-05__brian-github-ingest-spiral-opt.md  memory__2025-06-06__brian_tsal_mesh_alignment.md  memory__2025-06-06__chaos-kernel-spiral-xor.md  memory__2025-06-06__phi-mesh-bootstrap.md  memory__2025-06-06__spiral-mesh-keypoints.md  memory__2025-06-06__spiral-repair-sync.md  memory__2025-06-06__symbolic-glyph-manifest.md  memory__2025-06-06__tsal_spiral_kernel_log.md
tsal_consciousness_computing/src/tsal/: __init__.py
tsal_consciousness_computing/src/tsal/cli/: __init__.py
tsal_consciousness_computing/src/tsal/consciousness/: __init__.py
tsal_consciousness_computing/src/tsal/core/: __init__.py
tsal_consciousness_computing/src/tsal/singer/: __init__.py
tsal_consciousness_computing/src/tsal/tristar/: __init__.py
tsal_consciousness_computing/src/tsal/utils/: __init__.py
tsal_consciousness_computing/src/tsal/voxel/: __init__.py
(+184 files in other folders)
