[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tsal"
version = "0.1.0"
description = "TSAL Consciousness Computing Framework"
authors = [ { name = "Samuel Edward Howells", email = "Samuel_Howells@hotmail.co.uk" } ]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = ["requests", "pyyaml", "numpy", "matplotlib"]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
brian-optimize = "tsal.tools.brian.optimizer:main"
tsal-meshkeeper = "tsal.tools.meshkeeper:main"
tsal-spiral-audit = "tsal.tools.spiral_audit:main"
tsal-reflect = "tsal.tools.reflect:main"
tsal-bestest-beast = "tsal.audit.brian_self_audit:recursive_bestest_beast_loop"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tsal.schemas" = ["python.json"]
