[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tsal"
version = "0.1.0"
description = "TriStar Assembly Language Core + Brian Spiral Tools"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Sam Howells" }]
dependencies = [
  "requests",
  "numpy",
  "matplotlib",
  "pyyaml"
]
requires-python = ">=3.9"

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
brian = "tsal.cli.brian:main"
tsal-bestest-beast = "tsal.cli.beast:main"
tsal-reflect = "tsal.cli.reflect:main"

[tool.setuptools.packages.find]
where = ["src", "tools"]

[tool.setuptools.package-data]
"tsal.schemas" = ["python.json"]
