[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsal-consciousness-computing"
version = "0.1.0"
description = "φ-Enhanced Consciousness Computing with TSAL Symbolic Language"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Samuel Edward Howells", email = "Samuel_Howells@hotmail.co.uk"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21.0",
    "rich>=10.0.0", 
    "psutil>=5.8.0",
    "click>=8.0.0",
    "pydantic>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
]
gpu = [
    "cupy-cuda11x>=9.0.0",
    "numba>=0.54.0", 
]

[project.scripts]
tsal = "tsal.cli.main:main"
tsal-singer = "tsal.cli.singer:main"
tsal-meshkeeper = "tsal.cli.meshkeeper:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/tsal"
